# csc2701_project

./: .gitignore  Dockerfile  README.md  flow.md  main.py  pyproject.toml  requirements.txt  requirements_h.txt  trial.ipynb
backend/: main.py
backend/rag_architecture/: manual.ipynb  rag.py  utils.py
backend/vector_db/: data_preprocessor.py
data/docs/: handbook.txt
evaluation/: utils.py
frontend/: docker-compose.app.yml
rag_architecture/: manual.ipynb  prompts.py  rag.py
src/db/: data_preprocessor.py
src/frontend/: app.py
src/rag_architecture/: manual.ipynb  rag.py
