[project]
name = "csc2701-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.1.1",
    "dotenv>=0.9.9",
    "google-genai>=1.39.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "openai>=1.109.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
